--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
       <div class="col-md-8 d-flex align-items-center justify-content-center">
         <div class="form shadow">
           <h2>Cadastro de Aluno</h2>
-          <form action="" id="form" class="needs-validation mt-4" novalidate>
+          <form
+            action=""
+            id="form"
+            class="needs-validation mt-4"
+            onsubmit="alertOnSubmit()"
+            novalidate
+          >
             <div class="row g-3 mb-3">
               <div class="col has-validation">
                 <label for="formFName" class="form-label">Primeiro Nome:</label>
@@ -79,7 +85,7 @@
                   type="tel"
                   class="form-control"
                   placeholder="(XX) XXXXX-XXXX"
-                  pattern="([0-9]{2})\s([0-9]{4,5})-([0-9]{4})"
+                  pattern="^(\d{2}\)\s(\d{5}\)-(\d{4})$"
                   aria-label="fone"
                   required
                 />
@@ -117,7 +123,7 @@
                   aria-label="Data de nascimento"
                   required
                 />
-                <div class="invalid-feedback">Campo obrigatório</div>
+                <div class="invalid-feedback">Digite uma data válida.</div>
               </div>
             </div>
             <div class="g-3 mt-3 mb-3">
@@ -215,7 +221,14 @@
               <div class="invalid-feedback">
                 Você precisa concordar com os termos e condições para continuar.
               </div>
-              <div class="d-flex gap-2 mt-3 justify-content-ends">
+              <div
+                class="alert alert-success text-center mt-3 visually-hidden"
+                id="alert"
+                role="alert"
+              >
+                Cadastro realizado com sucesso!
+              </div>
+              <div class="d-flex gap-2 mt-3 justify-content-end">
                 <input
                   type="submit"
                   id="submit"
